# FastCorrelation

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: listArchs.sh
src/: CMakeLists.txt  FastCorrelation.cpp  FastCorrelation.cu  Makefile  config.h.in  correlationCPU.h  correlationGPU.cu  correlationGPU.cuh  correlationGPU.h  cufftPrecisionAgnostic.h  debugTools.cuh  parseArguments.h  superRead.h
